change design site

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="index2.css">
 </head>
 <body>
-    <p>this is App</p>
-    <button>Submit</button>
+    <div class="header-top">
+        <label>top header</label>
+        <p>this is App</p>
+        <button>Submit</button>
+    </div>
 </body>
 </html>
 asdasd
